changed by abel

--- a/gitpractice.html
+++ b/gitpractice.html
@@ -6,6 +6,8 @@
     <title>test 2</title>
 </head>
 <body>
-<h1>Git practice question adding element in html</h1>    
+<h1>Git practice question adding element in html</h1>
+<h1>Updated by abela itself</h1>  
+<script src="js/script.js"></script>  
 </body>
 </html>
